# ai-chat-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  claude-code-prompt.md  config.py  interface.py  main.py  mcp_client.py  mcp_integration.py  mcp_server.py  pyproject.toml  requirements.txt  storage.py  tools.py
data/: sample.db  setup_sample_db.py
examples/pr_review/: __init__.py  agents.py  workflow.py
examples/research/: __init__.py  workflow.py
orchestrator/: __init__.py  agent.py  context.py  message.py  resilience.py  runtime.py  tracing.py
orchestrator/memory/: __init__.py  episodic.py  retriever.py  semantic.py  working.py
orchestrator/observability/: __init__.py  logger.py  metrics.py
orchestrator/patterns/: __init__.py  base.py  debate.py  hierarchical.py  parallel.py  reflexion.py  sequential.py
orchestrator/tools/: __init__.py  base.py  registry.py  sandbox.py  sql_query.py  web_search.py
static/css/: style.css
static/js/: chat.js
templates/: chat.html
tests/: conftest.py  test_agent.py  test_memory.py  test_tools.py
web/: __init__.py  app.py  chat_service.py
